# falconfs

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  NOTICE  README.md  build.sh
.github/: CODEOWNERS
.github/workflows/: build.yml  install_dependencies.sh  run_test.sh  smoke_test.sh
cloud_native/deployment_script/: cn.yaml  configmap.yaml  dn.yaml  node.json  prepare.sh  store.yaml  zk.yaml
cloud_native/docker_build/: Dockerfile  clean.sh  docker_build.sh  dockerbuild-dockerfile-ubuntu24.04  ldd_copy.sh
cloud_native/docker_build/cn/: Dockerfile  docker-entrypoint.sh  postgresql_falcon.conf  start.sh  stop.sh
cloud_native/docker_build/dn/: Dockerfile  check_liveness.sh  docker-entrypoint.sh  rm_logs.sh  start.sh
cloud_native/docker_build/store/: Dockerfile  check_liveness.sh  config.json  docker-entrypoint.sh  start.sh  stop.sh
cloud_native/falcon_cm/: falcon_cm_cn.py  falcon_cm_dn.py
cmake/: FindBRPC.cmake  FindLevelDB.cmake  Flatbuffers.cmake  Protobuf.cmake
common/src/buffer/: base64.cpp  (+2 more)
config/: config.json
deploy/: falcon_env.sh  falcon_rebalance_shards.sh  falcon_start.sh  falcon_stop.sh
deploy/ansible/: README.md  build-gcc-14.sh  falcontest.yml  install-openEuler22.03.sh  install-openeuler22.03-LTS-SP4.sh  install-ubuntu22.04.sh  install-ubuntu24.04.sh  inventory  link_third_party_to.sh  unlink_third_party.sh
deploy/client/: falcon_client_config.sh  falcon_client_start.sh  falcon_client_stop.sh
deploy/meta/: falcon_meta_config.sh  falcon_meta_start.sh  falcon_meta_stop.sh  postgresql.conf.template
docker/: README.md  build_falcon_docker.sh  openEuler24.03-dev-dockerfile  ubuntu22.04-dev-dockerfile  ubuntu22.04-dockerfile  ubuntu24.04-base-builder-dockerfile  ubuntu24.04-cn-dockerfile  ubuntu24.04-dev-dockerfile  ubuntu24.04-dn-dockerfile  ubuntu24.04-store-dockerfile
docs/: design.md  setup.md
falcon/: Makefile  MakefilePlugin.brpc  MakefilePlugin.hcom  falcon--1.0.sql  falcon.control  falcon_init.c
falcon/brpc_comm_adapter/: brpc_meta_service_imp.cpp  brpc_meta_service_job.cpp  falcon_brpc_server.cpp
falcon/connection_pool/: brpc_server.cpp  connection_pool.c  falcon_connection_pool.c  falcon_meta_rpc.cpp  falcon_worker_task.cpp  pg_connection.cpp  pg_connection_pool.cpp
falcon/control/: control_flag.c  control_func.c  hook.c
falcon/dir_path_shmem/: dir_path_hash.c
falcon/distributed_backend/: distributed_backend_falcon.c  remote_comm_falcon.c
falcon/hcom_comm_adapter/: hcom_meta_service.cpp  hcom_meta_service_job.cpp
falcon/include/: falcon_config.h
falcon/metadb/: directory_table.c  foreign_server.c  inode_table.c  kvmeta_table.c  meta_handle.c  meta_handle_helper.c  meta_plain_interface.c  meta_process_info.c  meta_serialize_interface.c  meta_serialize_interface_helper.cpp  shard_table.c  slice_table.c  sliceid_table.c  xattr_table.c
falcon/plugin/: falcon_plugin_loader.c
falcon/transaction/: falcon_distributed_transaction.c  transaction.c  transaction_cleanup.c
falcon/utils/: error_code.c  falcon_shmem_allocator.c  path_parse.c  rwlock.c  serialized_data.c  utils.c  utils_standalone.c
falcon_client/: CMakeLists.txt  fuse_main.cpp
falcon_client/src/: connection.cpp  error_code.cpp  falcon_meta.cpp  inner_falcon_meta.cpp  router.cpp  serialized_data.c  utils.cpp
falcon_client/src/include/: connection.h  error_code.h  falcon_meta.h  inner_falcon_meta.h  router.h  utils.h
falcon_store/: CMakeLists.txt
falcon_store/config/: falcon_store_node.txt
falcon_store/src/brpc/: brpc_main.cpp
falcon_store/src/connection/: falcon_io_client.cpp  node.cpp
falcon_store/src/disk_cache/: disk_cache.cpp
falcon_store/src/falcon_store/: falcon_store.cpp
falcon_store/src/include/brpc/: brpc_server.h
falcon_store/src/include/connection/: falcon_io_client.h  node.h
falcon_store/src/include/disk_cache/: disk_cache.h
falcon_store/src/include/falcon_store/: falcon_store.h
falcon_store/src/include/storage/: obs_storage.h  storage.h
falcon_store/src/include/util/: file_lock.h  utils.h
falcon_store/src/storage/: obs_storage.cpp
falcon_store/src/util/: file_lock.cpp  utils.cpp
log/: .gitkeep
patches/: apply.sh  no_root_check.patch  postgres.patch  postgresql_RelationTruncate_bugfix.patch
python_interface/: README.md  setup.py
python_interface/_pyfalconfs_internal/: CMakeLists.txt  _pyfalconfs_internal.cpp  throw_hook.cpp
python_interface/pyfalconfs/: __init__.py  pyfalconfs.py  test.py
remote_connection_def/fbs/: falcon_meta_param.fbs  falcon_meta_response.fbs
remote_connection_def/proto/: brpc_io.proto  falcon_meta_rpc.proto
remote_connection_def/remote_connection_utils/: error_code_def.h  serialized_data.h
rpm/: README.md  falconfs.spec
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_expiring_cache.cpp  test_expiring_cache.h  test_falcon_cm.h
tests/falcon/: CMakeLists.txt  test_falcon_concurrent_queue.cpp  test_falcon_concurrent_queue.h
tests/falcon_client/: CMakeLists.txt  test_connection.cpp  test_connection.h  test_router.cpp  test_router.h
tests/falcon_cm/: README.md  falcon_cm_test.py
tests/falcon_db/: CMakeLists.txt  test_utils.cpp  test_utils.h
tests/falcon_meta_service_plugin/: CMakeLists.txt  falcon_meta_service_test_plugin.cpp
tests/falcon_plugin/: CMakeLists.txt  test_plugin_background.c  test_plugin_framework.cpp  test_plugin_framework.h  test_plugin_inline.c  test_plugin_invalid.c  test_plugin_loader.cpp
tests/falcon_store/: CMakeLists.txt  test_disk_cache.cpp  test_disk_cache.h  test_falcon_store.cpp  test_falcon_store.h  test_falcon_store_threaded.cpp  test_file_lock.cpp  test_file_lock.h  test_node.cpp  test_node.h  test_read_stream.cpp
tests/private-directory-test/: CMakeLists.txt  DBarrier.h  README.md  dfs.h  distribute.sh  falconfs.cc  kill_test.sh  local-run.sh  main.cc  posix.cc  prep-env.sh  remote-run.sh  send_signal.py  workloads.cc
tests/regress/: Dockerfile  README.md  docker-compose-dual.yaml  docker-compose-single.yaml  docker-compose-triple.yaml  start.sh  start_regress_test.sh  stop.sh
(+94 files in other folders)
